--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@mui/material": "^5.3.1",
     "@mui/icons-material": "^5.3.1",
+    "@mui/material": "^5.3.1",
     "@mui/styled-engine-sc": "^5.3.0",
     "axios": "^0.25.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.26.0",
     "react-redux": "^7.2.6",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
@@ -46,8 +47,9 @@
     "@types/react-dom": "^17.0.11",
     "@types/react-redux": "^7.1.22",
     "@types/styled-components": "^5.1.21",
-    "react-app-rewired": "^2.1.11",
     "customize-cra": "^1.0.0",
+    "prettier": "2.5.1",
+    "react-app-rewired": "^2.1.11",
     "typescript": "^4.5.5"
   }
 }
