--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,8 @@
     "jsx": "react-jsx",
     "noImplicitAny": true,
     "noImplicitThis": true,
-    "strictNullChecks": true
+    "strictNullChecks": true,
+    "types": ["react/next", "react-dom/next"]
   },
   "include": ["src"]
 }
